force-app/main/default/objects/Product_Information__c/Product_Information__c.object-meta.xml
<CustomObject>
    <description>Custom object used to display the current products information for contacts, based on the plan type and their specific home country</description>
    <label>Product Information</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Product Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>