force-app/main/default/objects/Product_Information__c/fields/Charge_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type_Name__c</fullName>
    <description>Formula field to display the related lookup object Charge Type name</description>
    <formula>Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Type Name</label>
    <type>Text</type>
</CustomField>