force-app/main/default/objects/Product_Information__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>This field is generated automatically based on the Home Country currency field</description>
    <formula>TEXT(Home_Country__r.Currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is generated automatically based on the Home Country currency field</inlineHelpText>
    <label>Currency</label>
    <type>Text</type>
</CustomField>