force-app/main/default/objects/Product_Information__c/fields/Currency_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Currency_Symbol__c</fullName>
    <description>This field is generated automatically based on the Home Country currency field</description>
    <formula>CASE(
    Currency__c,
    &quot;EUR&quot;, &quot;€&quot;,
    &quot;GBP&quot;, &quot;£&quot;,
    &quot;USD&quot;, &quot;$&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is generated automatically based on the Home Country currency field</inlineHelpText>
    <label>Currency Symbol</label>
    <type>Text</type>
</CustomField>