force-app/main/default/objects/Product_Information__c/fields/Home_Country__c.field-meta.xml
<CustomField>
    <fullName>Home_Country__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related Home Country record</description>
    <label>Home Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Products Information</relationshipLabel>
    <relationshipName>Products_Information</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>