force-app/main/default/objects/Product_Information__c/fields/Not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Not_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate when a charge is not applicable</description>
    <inlineHelpText>Check this box when a charge is not applicable</inlineHelpText>
    <label>Not Applicable</label>
    <type>Checkbox</type>
</CustomField>