force-app/main/default/objects/Product_Information__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related charge type</description>
    <label>Type</label>
    <referenceTo>Charge_Type__c</referenceTo>
    <relationshipLabel>Products Information</relationshipLabel>
    <relationshipName>Products_Information</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>