force-app/main/default/objects/Product_Information__c/fields/Value_Display__c.field-meta.xml
<CustomField>
    <fullName>Value_Display__c</fullName>
    <description>This field is generated automatically based on the values added</description>
    <formula>IF( 
   RecordType.Name = &quot;Fee&quot;,
   IF(
      Value_Percent__c = 0, 
      &quot;Free&quot;, 
      TEXT(Value_Percent__c*100) &amp; &quot;%&quot;),

   IF(
      Not_Applicable__c, 
      &quot;N/a&quot;,
      IF(
         Value_Number__c-FLOOR(Value_Number__c)=0,
         Currency_Symbol__c &amp; &quot; &quot; &amp; SUBSTITUTE(TEXT( ROUND(Value_Number__c, 2)),&quot;.&quot;,&quot;,&quot;),
         Currency_Symbol__c &amp; &quot; &quot; &amp; SUBSTITUTE(TEXT(FLOOR(Value_Number__c)) &amp; &quot;.&quot; &amp; LPAD(TEXT((Value_Number__c - FLOOR(Value_Number__c)) * 100), 2, &quot;0&quot;),&quot;.&quot;,&quot;,&quot;)
         )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is generated automatically based on the values added</inlineHelpText>
    <label>Value Display</label>
    <type>Text</type>
</CustomField>