force-app/main/default/objects/Product_Information__c/fields/Value_Number__c.field-meta.xml
<CustomField>
    <fullName>Value_Number__c</fullName>
    <description>Field used to display the numeric value of the record</description>
    <label>Value Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>