force-app/main/default/objects/Product_Information__c/fields/Value_Percent__c.field-meta.xml
<CustomField>
    <fullName>Value_Percent__c</fullName>
    <description>Field used to display the percentage</description>
    <label>Value Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>