force-app/main/default/objects/Product_Information__c/recordTypes/Cost.recordType-meta.xml
<RecordType>
    <fullName>Cost</fullName>
    <active>true</active>
    <description>Recordtype to specify when a product info is a cost</description>
    <label>Cost</label>
</RecordType>