force-app/main/default/objects/Product_Information__c/recordTypes/Fee.recordType-meta.xml
<RecordType>
    <fullName>Fee</fullName>
    <active>true</active>
    <description>Recordtype to specify when a product info is a fee</description>
    <label>Fee</label>
</RecordType>