force-app/main/default/objects/Product_Information__c/validationRules/Check_Charge_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Charge_Type</fullName>
    <active>true</active>
    <errorConditionFormula>Type__r.RecordType.Name !=  RecordType.Name</errorConditionFormula>
    <errorMessage>Charge type record type selected must be same type as the record type of the product information.</errorMessage>
</ValidationRule>