force-app/main/default/objects/Product_Information__c/listViews/ATM_Fee_in_Other_Currencies.listView-meta.xml
<ListView>
    <fullName>ATM_Fee_in_Other_Currencies</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Home_Country__c</columns>
    <columns>Value_Display__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Charge_Type_Name__c</field>
        <operation>equals</operation>
        <value>ATM Fee in Other Currencies</value>
    </filters>
    <label>ATM Fee in Other Currencies</label>
</ListView>