force-app/main/default/objects/Product_Information__c/listViews/Card_Replacement_Cost.listView-meta.xml
<ListView>
    <fullName>Card_Replacement_Cost</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Home_Country__c</columns>
    <columns>Value_Display__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Charge_Type_Name__c</field>
        <operation>equals</operation>
        <value>Card Replacement Cost</value>
    </filters>
    <label>Card Replacement Cost</label>
</ListView>