force-app/main/default/objects/Product_Information__c/listViews/Cost_per_Calendar_Month.listView-meta.xml
<ListView>
    <fullName>Cost_per_Calendar_Month</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Home_Country__c</columns>
    <columns>Value_Display__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Charge_Type_Name__c</field>
        <operation>equals</operation>
        <value>Cost per Calendar Month</value>
    </filters>
    <label>Cost per Calendar Month</label>
</ListView>